[B]Retrospect v5.0.1~beta1 - Changelog - 2019-08-08[/B]

....

[B]Framework related[/B]
* Fixed: version number revision and build were reversed.
* Fixed: only major and minor need to be equal for a channel to be compatible
* Fixed: video items always showed channel settings even if a channel has no settings
* Fixed: some more information when logging on to a channel fails

[B]GUI/Settings/Language related[/B]
-

[B]Channel related[/B]
* Added: if no username was configured, log this as a warning (See #1187)