@@ -1,6 +1,6 @@
 {
   "id": "channel.de",
-  "version": "5.0.0.0",
+  "version": "5.0.0",
   "textures": {
     "channel.de.srf/srffanart.jpg": "a403956b8829c54c7df6d7df5606e5bc",
     "channel.de.srf/srffanart3.jpg": "424652fc701c24d5cd94e2d4d8edf30a",
