@@ -1,6 +1,6 @@
 {
   "id": "channel.mtv",
-  "version": "5.0.0.0",
+  "version": "5.0.0",
   "textures": {
     "channel.mtv.mtvnl/mtvfanart.jpg": "6138a5524e8eeec6637b60daa0955714",
     "channel.mtv.mtvnl/mtvfanart2.jpg": "256792d58de0c066505266ef8ade34b4",
