@@ -1,6 +1,6 @@
 {
   "id": "channel.nick",
-  "version": "5.0.0.0",
+  "version": "5.0.0",
   "textures": {
     "channel.nick.nickelodeon/nickfanart.jpg": "665bd6007b2099beabc3cb9d051e6050",
     "channel.nick.nickjr/nickfanart.jpg": "665bd6007b2099beabc3cb9d051e6050",
