@@ -1,6 +1,6 @@
 {
   "id": "channel.no",
-  "version": "5.0.0.0",
+  "version": "5.0.0",
   "textures": {
     "channel.no.nrkno/nrkfanart.jpg": "3b3df86edb7e6f20ecdbf77679b7b964",
     "channel.no.nrkno/nrknoimage.png": "97130b4c02374dc4784e27135fbe8441",
