@@ -1,6 +1,6 @@
 {
   "id": "channel.regionalnl",
-  "version": "5.0.0.0",
+  "version": "5.0.0",
   "textures": {
     "channel.regionalnl.at5/at5fanart.jpg": "b0ecf807fcc933e88305cbc071c0ad5c",
     "channel.regionalnl.flevo/flevofanart.jpg": "2b9c66d86a8f3431666460107cad98c3",
