@@ -1,6 +1,6 @@
 {
   "id": "channel.sbsnl",
-  "version": "5.0.0.0",
+  "version": "5.0.0",
   "textures": {
     "channel.sbsnl.kijknl/net5fanart.jpg": "b1b55db8fef4e59f74413dd11d1d21e8",
     "channel.sbsnl.kijknl/sbs6fanart.jpg": "de93531e18f9c0cbf21e7c4962fe0325",
