@@ -1,6 +1,6 @@
 {
   "id": "channel.streams",
-  "version": "5.0.0.0",
+  "version": "5.0.0",
   "textures": {
     "channel.streams.radio538/radio538fanart.jpg": "b973540d8e6c83e8b218bcd0f4c58ffe",
     "channel.streams.radionl/radionlfanart.jpg": "d823ecb91e8a3a5e6cb10f8939eb27ea",
