@@ -1,6 +1,6 @@
 {
   "id": "channel.uk",
-  "version": "5.0.0.0",
+  "version": "5.0.0",
   "textures": {
     "channel.uk.bbc/bbc1large.png": "b0fdb57f5b1df337691ffe9b64820a3c",
     "channel.uk.bbc/bbc2large.png": "294185e907e938fb7128f569a627969f",
