@@ -1,6 +1,6 @@
 {
   "id": "channel.videos",
-  "version": "5.0.0.0",
+  "version": "5.0.0",
   "textures": {
     "channel.videos.amt/applemovietrailersfanart.jpg": "881038572b21f04891d34fbff4e0f31d",
     "channel.videos.amt/applemovietrailersfanart2.jpg": "d4faa4401fdee5b84c20e0299486b0dc",
